cf_template_init.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  NameOfService:
    Description: "The service name"
    Type: String
  KeyName:
    Description: Name of existing EC2 KeyPair to enable SSH access into the server
    Type: AWS::EC2::KeyPair::KeyName

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-1853ac65
    us-west-1:
      AMI: ami-bf5540df

Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
              php: []
            files:
            /var/www/html/index.php:
              content: !Sub |
                <?php print "Hello world"; ?>
            services:
              sysvinit:
                httpd:
                  enabled: true
                  ensureRunning: true

    Properties:
      ImageId:
        Fn::FindInMap:
        - RegionMap
        - Ref: AWS::Region
        - AMI
      SecurityGroups:
      - !Ref MySecurityGroup
      Tags:
        - Key: "Name"
          Value: !Ref NameOfService
      KeyName: !Ref KeyName
      UserData:
        'Fn::Base64':
        !Sub |
        #!/bin/bash -xe
        # Ensure AWS CFN Bootstrap is latest
        yum install -y aws-cfn-bootstrap
        # Install the files and packages from the metadata
        /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} -- resource EC2Instance --region ${AWS::Region}

    MySecurityGroup:
      Type: AWS::EC2::SecurityGroup
        Properties: 
          GroupDescription: Open ports 22 and 80
          SecurityGroupIngress: 
          - IpProtocol: tcp
            FromPort: '22'
            ToPort: '22'
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: '80'
            ToPort: '80'
            CidrIp: 0.0.0.0/0

Outputs:
  Website:
    Description: The Public DNC for the EC2 Instance
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'
